--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,16 @@
 	"content_scripts": [
 		{
 		"matches": ["https://*.bilibili.com/*"],
-		"js": ["Content.js"]
+		"js": ["test.js"]
 		}
 	],
 	"browser_action": {
 		"default_title": "Bilibili_DarkMode",
 		"default_popup": "Popup.html"
-	}
+	},
+	"permissions": [
+		"https://*/*",
+        "http://*/*",
+        "tabs"
+	]
 }
